--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,3 @@
-@import "~antd/dist/antd.css";
-
 :root {
   --main-bg-color: #5cb85c;
   --second-bg-color: #ffffff;
@@ -15,6 +13,70 @@ body {
   font-family: "Poppins", sans-serif;
   // font-size: 1px;
 }
+
+// global style
+.center-f {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.center-f-c {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.title-font {
+  font-size: 22px !important;
+  font-weight: bold;
+}
+.font-sm {
+  font-size: 15px !important;
+}
+.font-md {
+  font-size: 18px !important;
+}
+.font-xl {
+  font-size: 50px !important;
+}
+.font-md-b {
+  font-size: 18px !important;
+  color: var(--main-bg-color);
+  font-weight: bold;
+}
+
+// ant-custom
+.ant-layout-header {
+  background-color: var(--main-bg-color);
+  min-height: 169px;
+  color: var(--second-bg-color);
+  text-align: center;
+  box-shadow: inset 3px 3px 7px rgba($color: #000000, $alpha: 0.2),
+    inset -3px -3px 7px rgba($color: #000000, $alpha: 0.2);
+  font-size: 22px;
+  .title {
+    font-size: 50px;
+    font-size: bold;
+  }
+}
+.ant-layout-content {
+  background-color: var(--second-bg-color);
+}
+
+.heart-emotion {
+  width: 35px;
+  height: 35px;
+  border: 2px solid var(--main-bg-color);
+  padding: 7px 0px 0px 9px;
+  border-radius: 5px;
+  color: var(--main-bg-color);
+  &:hover {
+    background-color: var(--main-bg-color);
+    color: var(--second-bg-color);
+  }
+}
+
+// main
 header.nav-head {
   width: 100%;
   box-shadow: 2px 2px 5px rgba($color: #000000, $alpha: 0.2);
@@ -57,57 +119,12 @@ header.nav-head {
   }
 }
 
-// global style
-
-.center-f {
+.paginate-wrapper {
   display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.center-f-c {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.title-font {
-  font-size: 22px !important;
-  font-weight: bold;
-}
-.font-sm {
-  font-size: 15px !important;
-}
-.font-md {
-  font-size: 18px !important;
+  justify-content: flex-end;
+  align-items: baseline;
 }
 
-// ant-custom
-.ant-layout-header {
-  background-color: var(--main-bg-color);
-  min-height: 169px;
-  color: var(--second-bg-color);
-  text-align: center;
-  box-shadow: inset 3px 3px 7px rgba($color: #000000, $alpha: 0.2),
-    inset -3px -3px 7px rgba($color: #000000, $alpha: 0.2);
-  .title {
-    font-size: 50px;
-    font-size: bold;
-  }
-}
-.ant-layout-content {
-  background-color: var(--second-bg-color);
-}
-
-.heart-emotion {
-  width: 35px;
-  height: 35px;
-  border: 2px solid var(--main-bg-color);
-  padding: 7px 0px 0px 7px;
-  border-radius: 5px;
-  color: var(--main-bg-color);
-
-  &:hover {
-    background-color: var(--main-bg-color);
-    color: var(--second-bg-color);
-  }
+.btn-tag {
+  cursor: pointer;
 }
