--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -53,6 +53,20 @@ body {
 .m-v-30 {
   margin: 30px 0px;
 }
+.no-break {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.break-word {
+  white-space: pre-wrap; /* CSS3 */
+  white-space: -moz-pre-wrap; /* Firefox */
+  white-space: -pre-wrap; /* Opera <7 */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  word-wrap: break-word; /* IE */
+  overflow-wrap: break-word;
+}
 
 // ant-custom
 .ant-layout-header {
@@ -175,6 +189,7 @@ header.nav-head {
       justify-content: flex-start;
       align-items: center;
       .profile-content {
+        margin-left: 15px;
         display: flex;
         flex-direction: column;
         justify-content: center;
