--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -54,6 +54,7 @@ body {
   margin: 30px 0px;
 }
 .no-break {
+  max-width: 500px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
